# dom_smoothie

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  result.html
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  benchmark.yml  coverage.yml  release.yml  rust.yml  wasm.yml
benches/: parse.rs
crates/bench/: Cargo.toml  test-pages
crates/bench/benches/: parse.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/js/: Cargo.toml  LICENSE_MIT  README.md
crates/js/src/: lib.rs
crates/js/tests/: web.rs
crates/lua/: Cargo.toml
docs/dev/bench/: data.js
dom-smoothie-bench/: Cargo.toml
dom-smoothie-bench/benches/: parse.rs
dom-smoothie-js/: Cargo.toml  README.md
dom-smoothie-js/check/: index.mjs  package-lock.json  package.json
dom-smoothie-js/src/: lib.rs
dom-smoothie-js/tests/: web.rs
dom-smoothie-lua/: Cargo.toml
dom-smoothie-lua/src/: lib.rs
dom_smoothie_cli/: Cargo.toml
dom_smoothie_cli/src/: main.rs
examples/: check_rfind.rs  readability.rs
src/: ac_automat.rs  aho.rs  config.rs  flags.rs  glob.rs  grab.rs  grab_flags.rs  helpers.rs  lib.rs  matching.rs  prep_article.rs  readability.js  readability.rs  readable.rs  score.rs  serde_helpers.rs  text_helpers.rs  url_helpers.rs
test-pages/: aclu_ld_meta.json  alice-two-paragraphs.html  ld.json  rustwiki_2024.html  rustwiki_2024_result.html  rustwiki_2024_result.txt
test-pages/aclu/: expected_ld_meta.json  expected_metadata.json
test-pages/alt/: arxiv
test-pages/alt/arstechnica/: expected.html  expected.md  expected.txt  expected_alt.txt
test-pages/alt/arxiv/: expected.txt  source.html
test-pages/alt/hacker-news/: expected.md  expected.txt  expected_alt.txt  source.html
test-pages/alt/mozilla_readability/: expected.md  expected_alt.txt  source.html
test-pages/alt/rust-blog/: expected.md  expected_alt.txt  source.html
test-pages/ok/005-unescape-html-entities/: expected-metadata.json
test-pages/ok/aclu/: expected-metadata.json
test-pages/ok/aktualne/: expected-metadata.json
test-pages/ok/ars-1/: expected-metadata.json
test-pages/ok/arstechnica/: expected-metadata.json  source.html
test-pages/ok/breitbart/: expected-metadata.json
test-pages/ok/citylab-1/: expected-metadata.json  expected.html
test-pages/ok/cnn/: expected-metadata.json
test-pages/ok/ehow-1/: expected-metadata.json
test-pages/ok/engadget/: expected-metadata.json  expected.html
test-pages/ok/gmw/: expected.html
test-pages/ok/hukumusume/: expected-metadata.json  expected.html
test-pages/ok/ietf-1/: expected.html
test-pages/ok/keep-tabular-data/: expected-metadata.json  expected.html
test-pages/ok/la-nacion/: expected-metadata.json  expected.html
test-pages/ok/lwn-1/: expected-metadata.json  expected.html
test-pages/ok/medicalnewstoday/: expected-metadata.json
test-pages/ok/medium-3/: expected-metadata.json
test-pages/ok/qq/: expected-metadata.json
test-pages/ok/table-style-attributes/: expected.html
test-pages/ok/tmz-1/: expected-metadata.json
test-pages/ok/toc-missing/: expected-metadata.json  expected.html
test-pages/ok/v8-blog/: expected.html
test-pages/ok/videos-1/: expected-metadata.json  expected.html
test-pages/ok/wikia/: expected-metadata.json
test-pages/ok/wikipedia/: expected.html
test-pages/ok/wikipedia-2/: expected-metadata.json  expected.html
test-pages/ok/wikipedia-3/: expected.html
test-pages/readability/002/: expected.html
test-pages/readability/article-author-tag/: expected-metadata.json
test-pages/readability/arxiv/: expected-metadata.json  expected.html  expected.md  expected_alt.txt
test-pages/readability/bbc-1/: expected-metadata.json
test-pages/readability/blogger/: expected-metadata.json
test-pages/readability/bug-1255978/: expected-metadata.json
test-pages/readability/buzzfeed-1/: expected-metadata.json
test-pages/readability/cnet/: expected-metadata.json
test-pages/readability/cnet-svg-classes/: expected-metadata.json
test-pages/readability/dropbox-blog/: expected-metadata.json
test-pages/readability/ehow-2/: expected-metadata.json
test-pages/readability/firefox-nightly-blog/: expected-metadata.json
test-pages/readability/folha/: expected-metadata.json
test-pages/readability/gitlab-blog/: expected-metadata.json
test-pages/readability/google-sre-book-1/: expected-metadata.json  expected.html
test-pages/readability/guardian-1/: expected-metadata.json
test-pages/readability/heise/: expected-metadata.json
test-pages/readability/herald-sun-1/: expected-metadata.json
test-pages/readability/iab-1/: expected-metadata.json
test-pages/readability/keep-images/: expected-metadata.json
test-pages/readability/lazy-image-1/: expected-metadata.json
test-pages/readability/lazy-image-2/: expected-metadata.json  expected.html
test-pages/readability/lemonde-1/: expected-metadata.json
test-pages/readability/liberation-1/: expected-metadata.json
test-pages/readability/lifehacker-working/: expected-metadata.json
test-pages/readability/links-in-tables/: expected-metadata.json
test-pages/readability/medium-1/: expected-metadata.json
test-pages/readability/medium-2/: expected-metadata.json
test-pages/readability/mercurial/: expected.html
test-pages/readability/mozilla-1/: expected-metadata.json
test-pages/readability/mozilla-2/: expected-metadata.json
test-pages/readability/msn/: expected-metadata.json
test-pages/readability/nytimes-1/: expected-metadata.json  expected.html
test-pages/readability/nytimes-2/: expected-metadata.json  expected.html
test-pages/readability/nytimes-3/: expected-metadata.json
test-pages/readability/nytimes-4/: expected-metadata.json
test-pages/readability/nytimes-5/: expected-metadata.json
test-pages/readability/pixnet/: expected-metadata.json
test-pages/readability/quanta-1/: expected-metadata.json
test-pages/replace-brs/: expected.html  source.html
tests/: alt.rs  bad.rs  candidate_modes.rs  common.rs  favicon.rs  metadata.rs  parse_policy.rs  readability.rs  readability_ok.rs  wasm.rs
(+25 files in other folders)
