[package]
name = "dom_smoothie"
version = "0.4.0"
description = "A Rust crate for extracting relevant content from web pages"
license = "MIT"
repository = "https://github.com/niklak/dom_smoothie"
documentation = "https://docs.rs/dom_smoothie/latest"
keywords = ["html", "readability"]
authors = ["niklak <morgenpurple@gmail.com>"]
edition = "2021"
readme = "README.md"
rust-version = "1.65"
exclude = [".*", "test-pages"]

[dependencies]
dom_query = {version = "0.13.2"}
html5ever = "0.29.0"
tendril = {version = "0.4.3"}
once_cell = { version = "1" }
regex = {version = "1.11.1"}
serde = {version = "1.0", features = ["derive"], optional = true}
gjson = {version = "0.8.1"}
html-escape = "0.2.13"
flagset = "0.4.6"
url = "2.5.4"
unicode-segmentation = "1.10.1"
thiserror = "2.0"
phf = { version = "0.11", features = ["macros"] }
foldhash = "0.1.4"

[dev-dependencies]
serde_json = {version = "1.0"}
serde = {version = "1.0", features = ["derive"]}

[features]
serde = ["dep:serde"]

[workspace]
members = [
    "dom_smoothie_cli"
]