
[workspace.package]
version = "0.6.1"
edition = "2021"
license = "MIT"
rust-version = "1.66"
repository = "https://github.com/niklak/dom_smoothie"
authors = ["niklak <morgenpurple@gmail.com>"]


[package]
name = "dom_smoothie"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A Rust crate for extracting relevant content from web pages"
documentation = "https://docs.rs/dom_smoothie/latest"
keywords = ["html", "readability"]
readme = "README.md"
exclude = [".*", "test-pages", "benches"]

[dependencies]
dom_query = {version = "0.15.0", features = ["mini_selector", "markdown"]}
tendril = {version = "0.4.3"}
once_cell = { version = "1" }
serde = {version = "1.0", features = ["derive"], optional = true}
gjson = {version = "0.8.1"}
html-escape = "0.2.13"
flagset = "0.4.6"
url = "2.5.4"
unicode-segmentation = "1.12.0"
thiserror = "2.0"
phf = { version = "0.11", features = ["macros"] }
foldhash = "0.1.4"

[dev-dependencies]
serde_json = {version = "1.0"}
serde = {version = "1.0", features = ["derive"]}
criterion = { version = "0.5", features = ["html_reports"] }


[features]
serde = ["dep:serde"]

[workspace]
members = [
    "dom_smoothie_cli",
    "dom-smoothie-js"
]

[[bench]]
name = "parse"
harness = false