[package]
name = "dom-smoothie-js"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A wrapper around the `dom_smoothie` crate for extracting relevant content from web pages"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.84"
dom_smoothie = { path = "./..", features = ["serde"] }

serde-wasm-bindgen = "0.6.5"
mini-alloc = {version = "0.7.0", optional = true}
cfg-if = "1.0.0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']


[features]
default = ["console_error_panic_hook", "mini-alloc"]
mini-alloc = ["dep:mini-alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]