[package]
name = "dom-smoothie-lua"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dom_smoothie = { path = ".." , features = ["serde"]}
mlua = { version = "0.11.3", features = ["lua54", "module", "serde"] }