[package]
name = "dom_smoothie_cli"
version = "0.3.0"
edition = "2021"
description = "A reference implementation of a CLI tool for the `dom_smoothie`"
authors = ["niklak <morgenpurple@gmail.com>"]


[dependencies]
dom_smoothie = {path = "./.."}
clap = {version = "4.5.27", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
