[package]
name = "dom-smoothie-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
dom_smoothie = { path = "../..", features = ["serde"] }


[dev-dependencies]
criterion = { version = "0.7.0" }

[[bench]]
name = "parse"
harness = false