[package]
name = "dom_smoothie_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "A reference implementation of a CLI tool for the `dom_smoothie`"
publish = false


[dependencies]
dom_smoothie = { path = "../.." }
clap = {version = "4.5.46", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
